fix call interface fillin up whole screen on mobile

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -495,6 +495,11 @@ body {
     .profile {
         justify-content: space-between;
     }
+
+    .call-interface {
+        max-height: 40vh;
+        overflow: scroll;
+    }
 }
 
 @media (min-width: 981px) {
